core: don't reset existing routes when merging IP setting

Don't reset existing routes if ipvx.ignore-auto-routes=yes: callers
should already avoid adding them when not needed.

Previously we would also reset the manual gateway route just added.

Fixes: 5c299454b49b165f645c25fd3e083c0bb747ad91

https://bugzilla.gnome.org/show_bug.cgi?id=790423